--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body{
     text-align: center;
     background-color: #121736;
     color: white;
+    font-family: "Press Start 2P", system-ui;
 }
 
 .container{
