--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,14 @@
 }
 
 body{
+
     text-align: center;
     background-color: #585c74;
     color: white;
     background: url(image/ball-7610545_1280.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 20px;
+    
 }
 
 .container{
@@ -19,7 +20,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    height: 80vh;
+    min-height: 90vh;
     gap: 20px;
     width: 100%;
 }
@@ -29,18 +30,21 @@ body{
     width: 200px;
     display: block;
     margin: 0 auto;
-    color: red;
-    background: black;
+    color: #ff0000;
+    background: #00000089;
     font-size: 40px;
     border-radius: 10px;
     font-family: "Press Start 2P", system-ui;
 }
 
 #input-two{
-    padding: 20px;
+    padding: 30px;
+    width: 200px;
+    display: block;
+    margin: 0 auto;
     color: #ff0000;
-    background: black;
-    font-size: 20px;
+    background: #00000089;
+    font-size: 40px;
     border-radius: 10px;
     font-family: "Press Start 2P", system-ui;
 }
