--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,8 @@ button{
     font-family: "Tiny5", sans-serif;
     font-size: 2rem;
     font-weight: bold;
+    background-color: #040418;
+    color: white;
 }
 
 .container-div-0ne, .container-div-two{
