--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,10 @@ button{
     color: white;
 }
 
+button:active{
+    background-color: #525261;
+}
+
 .container-div-0ne, .container-div-two{
     background-color: #0c0e1879;
     border-radius: 10px;
