--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,14 @@ body{
     
 }
 
+h1{
+    font-size: 3rem;
+}
+
+h2{
+    font-size: 2rem;
+}
+
 .container{
     display: flex;
     justify-content: center;
